- shrank h1 font size on mobile to correctly fit

--- a/a2/css/header/_mobile.sass
+++ b/a2/css/header/_mobile.sass
@@ -3,4 +3,6 @@
     .header-nav-container
       width: 100%
       header
-        width: 100%
+        width: 85%
+        h1
+          font-size: 2rem
